# MiNovel

./: build.gradle  gradle.properties  mi.gradle  settings.gradle
Annotetion/: build.gradle
annotationengine/: build.gradle
annotationengine/src/main/: AndroidManifest.xml
annotationengine/src/main/res/values/: strings.xml
app/: REDEMME  build.gradle  proguard-rules.pro  robust.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crash.cpp  native-lib.cpp
app/src/main/cpp/breakpad/: CMakeLists.txt
app/src/main/res/anim/: anim_item_right_in.xml
app/src/main/res/drawable/: select_fav.xml  shape_logo_back.xml
app/src/main/res/layout/: activity_load_type_face.xml  activity_main.xml  activity_mi_content.xml  activity_mi_drawer.xml  activity_mi_shift.xml  activity_novel_detail.xml  activity_read_novel.xml  activity_search_novel.xml  activity_shift_content.xml  logo.xml  (+30 more)
gradle/wrapper/: gradle-wrapper.properties
plug/: build.gradle
plug/src/main/: AndroidManifest.xml
resource/: build.gradle
resource/src/main/: AndroidManifest.xml
resuoce/: build.gradle
resuoce/src/main/: AndroidManifest.xml
roundconrtolview/: build.gradle
roundconrtolview/src/main/: AndroidManifest.xml
secondactivity/: build.gradle
secondactivity/src/main/: AndroidManifest.xml
secondactivity/src/main/debug/: AndroidManifest.xml
sharelib/: build.gradle
sharelib/src/main/: AndroidManifest.xml
skin/: build.gradle  注释
skin/src/main/: AndroidManifest.xml
somethingNeeddown/: TypefaceConfig
suspensionwindow/: build.gradle
suspensionwindow/src/main/: AndroidManifest.xml
suspensionwindow/src/main/debug/: AndroidManifest.xml
(+195 files in other folders)
